# multibg-wayland

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-MIT  PKGBUILD  PKGBUILD.in  README.md  rustfmt.toml
scripts/: cargo-tree-licences-not-mit.sh  ipc.bt  msrvcheck.sh  pkgbuild.sh
src/: cli.rs  compositors.rs  gpu.rs  image.rs  main.rs  poll.rs  signal.rs  wayland.rs
src/compositors/: hyprland.rs  niri.rs  niri2502.rs  niri2505.rs  niri2508.rs  niri2604.rs  sway.rs
src/gpu/: device.rs  instance.rs  memory.rs
